tests/quantified-constraints/T19690.stderr
T19690.hs:12:16: error: [GHC-05617]
    • Could not deduce ‘c’
        arising (via a quantified constraint) from a use of ‘go’
      from the context: Hold c
        bound by a quantified constraint at T19690.hs:12:16-17
      When trying to solve the quantified constraint
        Hold c => c
        arising from a use of ‘go’
    • In the expression: go
      In an equation for ‘anythingDict’:
          anythingDict
            = go
            where
                go :: (Hold c => c) => Dict c
                go = Dict
    • Relevant bindings include
        anythingDict :: Dict c (bound at T19690.hs:12:1)

